blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-nginx
  labels:
    app: blue-nginx
    app.kubernetes.io/instance: blue-nginx
  namespace: argocd
spec:
  selector:
    matchLabels:
      app: blue-nginx
  replicas: 2
  template:
    metadata:
      labels:
         app: blue-nginx
    spec:
      containers:
        - name: nginx
          image: hcwxd/blue-whale
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
