blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  namespace: shay-test
spec:
  type: ClusterIP
  selector:
    app: blue-nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3003
