blue-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: blue-nginx
  namespace: project01
spec:
  host: blue-shay.apps.ocp.mic.com.tw
  to:
    kind: Service
    name: blue-service
  port:
    targetPort: 3003
